# zombay

./: CMakeLists.txt  README.md  _config.yml
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_tile_level_loader/: LevelSystem.cpp
engine/src/: engine.cpp  system_resources.cpp  system_resources.h
lib_tile_level_loader/: levelsystem.cpp
practical_6_platformer/scenes/: scene_menu.cpp
res/: arena.txt  test.txt
res/img/: bullet.pyxel  char2.pyxel  zombay.pyxel  zombay2.pyxel  zombay3.pyxel
zombay/: entity.cpp  entity.h  game.h  main.cpp  platformer_main.cpp  player.cpp  player.h  prefabs.cpp  prefabs.h  steering.cpp  steering.h
zombay/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_ai_steering.cpp  cmp_ai_steering.h  cmp_bullet.cpp  cmp_bullet.h  cmp_button.cpp  cmp_button.h  cmp_physics.cpp  cmp_physics.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp
zombay/scenes/: scene_gameOver.cpp  scene_gameOver.h  scene_howTo.cpp  scene_howTo.h  scene_level1.cpp  scene_level1.h  scene_menu.cpp  scene_menu.h
